--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "prompt-toolkit>=3.0.51",
-    "rich>=14.0.0",
-]
+dependencies = ["prompt-toolkit>=3.0.51", "rich>=14.0.0"]
+
+[tool.ruff]
+line-length = 88
